openshift/Deployment.webapp.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://github.com/msakhawat/FlaskApp.git'
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"webapp-name:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"webapp-name\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: /apis/apps/v1/namespaces/webproject/deployments/webapp-name
  resourceVersion: '299590400'
  name: webapp-name
  uid: 35bd0bdc-fd42-4c5c-829f-c95258fec5c5
  creationTimestamp: '2020-10-13T07:24:52Z'
  generation: 2
  namespace: webproject
  labels:
    app: webapp-name
    app.kubernetes.io/component: webapp-name
    app.kubernetes.io/instance: webapp-name
    app.kubernetes.io/part-of: webapp-appname
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-name
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp-name
        deploymentconfig: webapp-name
    spec:
      containers:
        - name: webapp-name
          image: >-
            image-registry.openshift-image-registry.svc:5000/webproject/webapp-name@sha256:616a75aca2298f3361558b4d8708093716e8289f3d4cfd542cdd9c5c3ef745c9
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 2
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2020-10-13T07:25:55Z'
      lastTransitionTime: '2020-10-13T07:25:55Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-10-13T07:25:55Z'
      lastTransitionTime: '2020-10-13T07:24:52Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "webapp-name-5b7586d876" has successfully progressed.
