openshift/DeploymentConfig.yml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://github.com/msakhawat/FlaskApp.git'
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: >-
    /apis/apps.openshift.io/v1/namespaces/webproject/deploymentconfigs/webcomponent
  resourceVersion: '393808'
  name: webcomponent
  uid: a1a90f4c-f275-4d32-8895-6bfbc11eef37
  creationTimestamp: '2020-10-08T07:21:23Z'
  generation: 2
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2020-10-08T07:21:23Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:replicas': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:strategy':
            'f:activeDeadlineSeconds': {}
            'f:rollingParams':
              .: {}
              'f:intervalSeconds': {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
              'f:timeoutSeconds': {}
              'f:updatePeriodSeconds': {}
            'f:type': {}
          'f:template':
            .: {}
            'f:metadata':
              .: {}
              'f:creationTimestamp': {}
              'f:labels':
                .: {}
                'f:app': {}
                'f:deploymentconfig': {}
            'f:spec':
              .: {}
              'f:containers':
                .: {}
                'k:{"name":"webcomponent"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2020-10-08T07:30:31Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"webcomponent"}':
                  'f:image': {}
          'f:triggers': {}
        'f:status':
          'f:updatedReplicas': {}
          'f:readyReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:details':
            .: {}
            'f:causes': {}
            'f:message': {}
          'f:replicas': {}
          'f:availableReplicas': {}
          'f:observedGeneration': {}
          'f:unavailableReplicas': {}
          'f:latestVersion': {}
  namespace: webproject
  labels:
    app: webcomponent
    app.kubernetes.io/component: webcomponent
    app.kubernetes.io/instance: webcomponent
    app.kubernetes.io/part-of: webapp
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - webcomponent
        from:
          kind: ImageStreamTag
          namespace: webproject
          name: 'webcomponent:latest'
        lastTriggeredImage: >-
          image-registry.openshift-image-registry.svc:5000/webproject/webcomponent@sha256:e4cf55daa3bd7cc980b4f754246ddb2ed5e7eb9dec80f5b5d702aa6e652d9293
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: webcomponent
    deploymentconfig: webcomponent
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webcomponent
        deploymentconfig: webcomponent
    spec:
      containers:
        - name: webcomponent
          image: >-
            image-registry.openshift-image-registry.svc:5000/webproject/webcomponent@sha256:e4cf55daa3bd7cc980b4f754246ddb2ed5e7eb9dec80f5b5d702aa6e652d9293
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status:
  observedGeneration: 2
  details:
    message: config change
    causes:
      - type: ConfigChange
  availableReplicas: 1
  unavailableReplicas: 0
  latestVersion: 1
  updatedReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2020-10-08T07:30:30Z'
      lastTransitionTime: '2020-10-08T07:30:30Z'
      message: Deployment config has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-10-08T07:30:31Z'
      lastTransitionTime: '2020-10-08T07:30:24Z'
      reason: NewReplicationControllerAvailable
      message: replication controller "webcomponent-1" successfully rolled out
  replicas: 1
  readyReplicas: 1
