openshift/Pod.webapp.yml
kind: Pod
apiVersion: v1
metadata:
  generateName: webapp-name-5b7586d876-
  annotations:
    k8s.v1.cni.cncf.io/networks-status: |-
      [{
          "name": "openshift-sdn",
          "interface": "eth0",
          "ips": [
              "10.129.9.153"
          ],
          "dns": {},
          "default-route": [
              "10.129.8.1"
          ]
      }]
    kubernetes.io/limit-ranger: >-
      LimitRanger plugin set: cpu, memory request for container webapp-name;
      cpu, memory limit for container webapp-name
    openshift.io/scc: restricted
  selfLink: /api/v1/namespaces/webproject/pods/webapp-name-5b7586d876-kqhcj
  resourceVersion: '299590388'
  name: webapp-name-5b7586d876-kqhcj
  uid: ad50ab8a-4f2b-4645-9738-539b697d79a5
  creationTimestamp: '2020-10-13T07:25:50Z'
  namespace: webproject
  ownerReferences:
    - apiVersion: apps/v1
      kind: ReplicaSet
      name: webapp-name-5b7586d876
      uid: 17dc622a-f6ca-483b-9dca-9e73818eac12
      controller: true
      blockOwnerDeletion: true
  labels:
    app: webapp-name
    deploymentconfig: webapp-name
    pod-template-hash: 5b7586d876
spec:
  restartPolicy: Always
  serviceAccountName: default
  imagePullSecrets:
    - name: default-dockercfg-952d5
  priority: 0
  schedulerName: default-scheduler
  enableServiceLinks: true
  terminationGracePeriodSeconds: 30
  nodeName: ip-10-0-157-94.us-west-2.compute.internal
  securityContext:
    seLinuxOptions:
      level: 's0:c59,c39'
    fsGroup: 1003500000
  containers:
    - name: webapp-name
      image: >-
        image-registry.openshift-image-registry.svc:5000/webproject/webapp-name@sha256:616a75aca2298f3361558b4d8708093716e8289f3d4cfd542cdd9c5c3ef745c9
      resources:
        limits:
          cpu: 500m
          memory: 1536Mi
        requests:
          cpu: 50m
          memory: 256Mi
      volumeMounts:
        - name: default-token-99x9x
          readOnly: true
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      imagePullPolicy: Always
      securityContext:
        capabilities:
          drop:
            - KILL
            - MKNOD
            - SETGID
            - SETUID
        runAsUser: 1003500000
  serviceAccount: default
  volumes:
    - name: default-token-99x9x
      secret:
        secretName: default-token-99x9x
        defaultMode: 420
  dnsPolicy: ClusterFirst
  tolerations:
    - key: node.kubernetes.io/not-ready
      operator: Exists
      effect: NoExecute
      tolerationSeconds: 300
    - key: node.kubernetes.io/unreachable
      operator: Exists
      effect: NoExecute
      tolerationSeconds: 300
    - key: node.kubernetes.io/memory-pressure
      operator: Exists
      effect: NoSchedule
status:
  phase: Running
  conditions:
    - type: Initialized
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2020-10-13T07:25:50Z'
    - type: Ready
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2020-10-13T07:25:55Z'
    - type: ContainersReady
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2020-10-13T07:25:55Z'
    - type: PodScheduled
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2020-10-13T07:25:50Z'
  hostIP: 10.0.157.94
  podIP: 10.129.9.153
  podIPs:
    - ip: 10.129.9.153
  startTime: '2020-10-13T07:25:50Z'
  containerStatuses:
    - restartCount: 0
      started: true
      ready: true
      name: webapp-name
      state:
        running:
          startedAt: '2020-10-13T07:25:55Z'
      imageID: >-
        image-registry.openshift-image-registry.svc:5000/webproject/webapp-name@sha256:616a75aca2298f3361558b4d8708093716e8289f3d4cfd542cdd9c5c3ef745c9
      image: >-
        image-registry.openshift-image-registry.svc:5000/webproject/webapp-name@sha256:616a75aca2298f3361558b4d8708093716e8289f3d4cfd542cdd9c5c3ef745c9
      lastState: {}
      containerID: 'cri-o://6bdf1b6683bf764422761cf167f911740027732d9dacdc7222c58b671e4b7189'
  qosClass: Burstable
